# personal-finance-tracker

./: .env.sample  .gitignore  READme.md  docker-compose.yml  pyproject.toml
batch/.dlt/: config.toml
consumer/: consumer.py
consumer/sql/: create_transactions_raw.sql
dbt/personal_finance_tracker/: dbt_project.yml
dbt/personal_finance_tracker/models/mart/: mart_transactions.sql  schema.yml
dbt/personal_finance_tracker/models/staging/: schema.yml  sources.yml  stg_transactions_raw.sql
generator/: generator.py
ingestion/: accounts.py  categories.py  fetch_accounts.py  fetch_categories.py  fetch_transactions.py  pipeline.py  rest_api_accounts.duckdb  test-dlt.py  transactions.py  utils.py
ingestion/test/: test_connection.py
ingestion/utils/: client.py
orchestration/kestra/: pipeline.yml
receiver/: producer.py  receiver.py  webhook.py
streamlit/: app.py
streamlit/pages/: overview.py
