[project]
name = "personal-finance-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlt[duckdb]>=1.25.0",
    "dotenv>=0.9.9",
    "faker>=40.23.0",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "requests>=2.33.1",
    "uvicorn>=0.49.0",
]
